# vnc_xrender_test

./: CMakeLists.txt  xx_resize_demo  xx_resize_demo.c  xx_resize_demo_work.c
